// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Parts Snapshots Renders a DubLogoTitle with custom background 1`] = `
.emotion-6 {
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 64px;
  padding-left: 24px;
  background: pink;
}

.emotion-0 {
  line-height: 0;
}

.emotion-2 {
  font-size: 20px;
  font-weight: 400;
  padding: 8px 16px;
  padding-right: 32px;
  margin-left: 16px;
  white-space: nowrap;
  color: #005cb9;
  border-left: 1px solid #dfe2e6;
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-4 emotion-5"
    title="test"
  >
    <div
      className="emotion-0 emotion-1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<img src=\\"//design.workday.com/images/ck-dub-logo-blue.svg\\">",
        }
      }
      title="test"
    />
    <h3
      className="emotion-2 emotion-3"
      title="test"
    >
      test
    </h3>
  </div>
</div>
`;

exports[`Header Parts Snapshots Renders a blue-themed WorkdayLogoTitle 1`] = `
.emotion-6 {
  display: inline-block;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 80px;
}

.emotion-0 {
  padding-left: 24px;
  line-height: 0;
}

.emotion-2 {
  font-size: 20px;
  font-weight: 400;
  margin-left: 32px;
  padding: 16px;
  padding-left: 24px;
  padding-right: 32px;
  white-space: nowrap;
  display: initial;
  color: #ffffff;
  border-left: 1px solid rgba(223,226,230,0.4);
}

<div
  className="emotion-6 emotion-7"
>
  <div
    className="emotion-4 emotion-5"
    title="test"
  >
    <span
      className="emotion-0 emotion-1"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<img src=\\"//design.workday.com/images/ck-wday-logo-white.svg\\">",
        }
      }
      title="test"
    />
    <h3
      className="emotion-2 emotion-3"
      title="test"
    >
      test
    </h3>
  </div>
</div>
`;
